updates in /home and /business/engagement

--- a/index.htm
+++ b/index.htm
@@ -25,34 +25,40 @@
 &nbsp&nbsp
 <img src="images/clayMouldingChild.jpg" alt="1074 Vectors logo"/>
 <h1 style="font-size:250%;">
-<strong>3D</strong> does not demand <strong>mathematics</strong> to communicate. l
+<strong>3D</strong> does not demand <strong>mathematics</strong> to communicate. 
 </h1>
 <br>
 <br>
 <br>
 <p>3D programming makes sense! When it deals with huge data visualization, it's interesting too. <strong>1074 Vectors</strong> - The interactive 3D graphics expertize homes here. <strong>You</strong> are welcome as a reader, an enthusiast, a collaborator or as a product owner. 3D rendered screens will be the natural way to provide information from the data that you have!. 
 </p>
+
 <h1>/ home </h1>
-We love the evolution of interactive 3D graphics. 3D programming always had a glorious/fancy part and an precise engineering part. It's been challenging to keep quality of 3D with accuracy and performance. How to reduce repeated computing? Simple! Store. It’s a balance. Memory vs computing for performance. This old theory getting a couple of possibilities nowadays. It mixes with the distributed nature and low-capacity of the new generation head-end devices, it can be again challenging. Since battery involved, quality/watt, quality/degree Celsius etc kind of metrics also evolved. Also the computing can be split in cloud enabled internet/intranet for a FLOPS/$. So running cost is another metrics. Altogether a good engineering solution is not one aspect of tuning up. </p>
-<p>Much about engineering aspects! Engineering always serves the purpose well, any artistic rendering will be neglected. Without a good combination of colors and effects a good software will not please/impress her users. From Da-Vinci days itself, <strong>architecting</strong> plays an important role to beautify engineering for an artistic purpose. Architecting is not just engineering its very close to art. </p>
-<p>We love to deliver the artistic aspects excellently while our engineers do the best under the hood. We do architect not just engineer.</p>
-<p>To know more about doing a business taking support from us, see our /business link.</p>
+<p>3D programming always had an aristic part and a precise engineering part. </p>
+<p>Let us talk about engineering first. It's been challenging to retain quality of 3D without lossing accuracy and performance. How to reduce repeated computing to improve performance? Simple! Store some results. It’s a balance between Memory usage vs Computing for a better performance. This old theory is grabbing a new attention nowadays. With the distributed nature and low-capacity of the new generation head-end devices, it is more challenging. Since a battery is involved, quality/watt, quality/degree celsius etc kind of metrics also needs to be considered. Also the FLOPS/$ for computing can be split between local and cloud enabled internet/intranet resources. Hence, it is another metrics. Altogether a good engineering solution cannot be achieved by tuning a single aspect. </p>
+<p>Much about engineering aspects! Eventhough engineering always serves the purpose well, it does not consider the artistic quality. Without a good combination of colors and effects, a good software will not impress users. From Da-Vinci days itself, <strong>architecting</strong> plays an important role in beautifying engineering for artistic purpose. Architecting is not just engineering; it stands between engineering and art. Also it is very close to art. </p>
+<p>At 1074Vectors, we love to deliver the artistic aspects excellently. For that, our engineering team do the best under the hood of these excellent screens. We do architect not just engineer the 3D solutions.</p>
+<p>To know more about doing a business with our support, please see <a href="#BIZ">/business</a> link.</p>
+
 <p><strong>Important Note:-</strong></p> 
-<p>All companies have a weak part to point out in their SWOT charts. Ours is constraints on schedule vs availability of good man-power. Yes. It’s a point to mention as it connects with schedule constraints. At the same time, it is directly connected with our strongest points: QoS and Privacy handling. We have strict privacy handling strategy to protect our customer’s intellectual interests. As very well known, only good quality people can keep privacy intact. The side effect is we heavily depend on the core people we have. So book your engagement period beforehand. But always feel free to talk… we are happy to hear you. </p>
-<h1>/ business </h1><br>
+<p>All companies have a weak part to point out in their SWOT charts. Ours is constraints on schedule vs availability of good man-power. Yes. It’s a point to consider as it connects with schedule constraints. At the same time, it is directly connected with our strongest points: QoS and Privacy handling. We have strict privacy handling strategy to protect our customer’s intellectual interests. As it is very well known, only good quality people can keep privacy intact. The side effect is we heavily depend on the core people we have. So book your engagement period beforehand. But always feel free to talk… we are happy to hear you. </p>
+
+<h1 id="BIZ">/ business </h1><br>
 <h3>/ engagement models</h3><br>
 <p>
-We do programming. Specializes in “behind the screen technologies” of interactive graphics. More than coding, our job includes technology selection, architecting and technical support after deployment. Normally the technical support is done against queries specific to certain hardware platforms (eg:- GPU). 
+We do programming. Specializes in “behind the screen technologies” of interactive graphics. More than coding, our job includes technology selection, architecting and technical support after deployment. Normally the technical support is done against queries specific to certain hardware platforms (eg:- GPU).
 </p> <p>
-Software development around the globe is not that easy. Especially when it comes to 3D. Our ‘e’ medias are still a lot of grow to communicate subjects around 3D. At this scenario, it’s not that easy to start an engagement in a win-win model. 
+Global Software development is not that easy. Especially when it comes to 3D. Our ‘e’ medias still has a lot to grow in communicating subjects around 3D. In this scenario, it’s not that easy to start an engagement that will result in a win-win situation.
 </p> <p>
-We value our time and clients too. We value money budgeted for the project. So we do ‘outcome’ based model of business (a.k.a turnkey contracts). There is no man power discussions as we value the result than charging man-hours. However still… to start a development it is very unclear to arrive to an estimate at the starting point.  
+We value our time and that of our clients too. We value the money budgeted for the project. Hence we do ‘outcome’ based model of business (a.k.a turnkey contracts). There is no man power discussions as we value the result than charging for man-hours. However still… to start any development it is important to know the volume initially itself. 
 </p> <p>
-So two methods are generally adopted to START. One is unpaid; the other is marginally charged.</p> <p>
-1.	Proposal  (unpaid)</p> <p>
-2.	Technical analysis report & estimate</p> <p>
-Proposals: Proposals are executed for a first level review of the requirements in a technology context. Obviously it will propose a solution in a document. It will have technology details and rough understanding of the requirements. It can have a ball park estimate. It depends on the clarity of the solution, the complexity of targeted hardware and known varieties of input data. As our experts are normally engaged, scheduling for a proposal may take time. So this unpaid method is apt for those who have time to plan for a time-to-market. </p> <p>
-Technical Analysis report with estimation: A document is delivered. It contains a proposed solution with refined requirements, Technology selection, project schedule and a price estimates. Project will have a FS stage (functional specification stage) after this. The FS stage gives clarity on the features of the solution. But Technical analysis report is made after testing the potentially risky areas. Though the features are not fully formed, normally we can expect a success rate We have a history of 86% success rate on estimate and technology selection. The rest had requirement revamping during the course of the time. Depending on the complexity, the price ranges from 3000 USD to 30,000 USD. Suggest industrialists to start with this engagement model as estimates are accurate than a mere ballpark. This will help in proper budgeting which may again need to plan cash-flow. Though this is a paid method, the value of the report is not fully charged as we are also considering things in a start-up mindset. After all the success of this report is start of a wonderful industrial product. </p> 
+We adopt two methods to START the engagement. One is unpaid, while the other is marginally charged.</p> <p>
+1.     Proposal  (unpaid)</p> <p>
+2.     Technical analysis report & estimate</p> <p>
+Proposals: Proposals are executed for a first level review of the requirements in a technology context. Obviously it will propose a solution in a document. It will have technology details and rough understanding of the requirements. It may also include a ball park estimate. It depends on the clarity of the solution, the complexity of targeted hardware and known varieties of input data. As our experts are normally engaged, scheduling for a proposal may take time. So this unpaid method is apt for those who has flexibility in time-to-market. </p> <p>
+Technical Analysis report with estimation: A document is delivered which contains a proposed solution with refined requirements, Technology selection, project schedule and a price estimate. Project will have an FS stage (functional specification stage) after this. This stage gives clarity on the features of the solution. But Technical analysis report is made after testing the potentially risky areas. Though the features are not fully formed, normally we can expect a good success rate, which is around 86% for us. The rest had requirement revamping during the course of the time. Depending on the complexity, the price ranges from 3000 USD to 30,000 USD.</p>
+ 
+<p><strong>Which is the apt for you?</strong> For an industrialist, it is better to start with the latter engagement model as the estimates here are accurate than a mere ballpark. This will help in proper budgeting which may again need to plan cash-flow. Though this is a paid method, the value of the report is not fully charged as we are also considering things in a start-up mindset. After all, the success of this report is the beginning of a wonderful industrial product. If you are just seeking for a posibility of a solution for an initiation planning as an accademic exercise, though schedule is bit unpredicted, first method (unpaid) is sufficient.</p>
 
 <h3>/ contact </h3> <br>
 e-mail id : yourBuddy@1074vectors.com  <br><br>
@@ -112,13 +118,14 @@ It was always been difficult to interact with 3D models on a computer screen as 
 <h3>Choice of 3D Programming APIs </h3><br>
 There are only a few options when it comes to programming in 3D. While Microsoft is promoting DirectX and Apple promoting Metal, there is a huge fan base for Open GL too which is an open specification driven by the Khronos group. Of course, the popularity of Open GL is because of its cross-platform support. While the DirectX... 
 <a href="1074.Vectors.3D.Programming.APIs.htm">Read in full >></a>
-<br><br>
-<h3>Handling the target GPU (generations of GPUs) </h3><br>
-yet to publish>>
+
 <br><br>
 <h3>How to be faster with Multi-GPU </h3><br>
 In the terminologies of the 90’s, there is a classic term calld co-processor who assist the cpu for certain specialized jobs. GPUs are co-processors in that definition. But in 2016, GPUs far more than just assistants. It is powerful than CPUs.  It is true for both ends: an entry level PC with a discrete graphics card to a professional graphics workstation. In all cases it gives more FLOPS (floating point operations per second) for each $ you pay.
 <a href="1074.Vectors.Supporting.MultiGPU.htm">Read in full >></a>
+<br><br>
+<h3>Handling the target GPU  </h3><br>
+Yet to publish this article. We have had a few interesting experiences when we handled different GPU generations. Its quite amazing and risky that if we do program 3D screeens without considering those aspects. abosolutely it varies over time. 
 <br><br>
 <h1>/ join </h1><br>
 We welcome challenge loving programmers to our fleet.
