main update in /privacy
also in /join

--- a/index.htm
+++ b/index.htm
@@ -65,17 +65,13 @@ e-mail id : yourBuddy@1074vectors.com  <br><br>
 phone & whatsapp : +91 98 460 10 223 <br><br>
 1074vectors in google hangout and skype.<br><br>
 Kindly post your messages to start our discussion.<br><br>
-<h3>/ privacy</h3> <br>
-Privacy is very important for each one of us. Like that we honor other's privacy too. 
-<br><br>
-Our privacy strategy is very systematic and secure which is matured. First of all our core engineering staff is perfectly knew each other for last 20+ years. The core team will not pass any information without declassification to mathematics or art team even if it is a necessity. The declassification process is strategically our trade secret. Though we cannot give much light on that, in brief it is based on term mangling. Hard cipher systems are too poor compared to secrecy handling of a human brain. We have a process and practices which is matured over years. But bonding between core members are our value.
-<br><br>
-Since the declassification not just a law point of view, the receivers cannot even identify the product that they have contributed after its full development. Surely it's a protected by law too.
-<br><br>
-Sometimes it's hard for us as a company too when it comes to showcasing us. But marketing of a quality first team is not just that needed. You know! 
-<br><br>
-Another business impact is the execution. We normally prefer to keep privacy with trusted team. Also to keep quality we need to stick with that then too our 68% projects were delivered on time. Surely our privacy policy not that economical to us as we are taking projects on turnkey basis.
-<br><br>
+<h3 id="PRIVACY">/ privacy</h3> <br>
+Hard cipher systems are too poor compared to secrecy handling of a human brain!
+1074 Vector’s privacy strategy is very systematic and matured. First of all our core engineering team is perfectly knew each other for last 20+ years. Each engagement is interfaced by one from the core team. The core team is will be collectively responsible for offering the solution. The core team do not pass any information without declassification to other teams. Means the mathematics or art team will only be knowing the parts of the problem space.
+The declassification process is strategically our trade secret. Though we cannot give much light on that, in brief, it is based on terminology-mangling. We have a process and practices which is matured over years. Surely the bonding among the core team members are our value to keep this privacy strategy as a business pitch.</p>
+<p>Since the declassification not just a law point of view, the receivers cannot even identify the product that they have contributed after its full development. Surely it's a protected by law too.</p>
+<p>Sometimes it's hard for us as a company too when it comes to showcasing us. You know! </p>
+<p>Another business impact of this privacy strategy the execution. The trusted core team’s planned availability, mitigation of unplanned leaves, are always a bottleneck for a smoother execution. Surely our privacy policy is not that economical to us when a team member needs to unplanned leave. Partly it is because of our turkey engagement model. However 7 out of 10 projects are always on time.</p>
 <h3>/ availability</h3><br>
 Tentative schedule to take up activities can be arranged as follows. Helpful for your planning even before you contact us.
 <br><br>
@@ -125,15 +121,13 @@ In the terminologies of the 90’s, there is a classic term calld co-processor w
 <a href="1074.Vectors.Supporting.MultiGPU.htm">Read in full >></a>
 <br><br>
 <h3>Handling the target GPU  </h3><br>
-Yet to publish this article. We have had a few interesting experiences when we handled different GPU generations. Its quite amazing and risky that if we do program 3D screeens without considering those aspects. abosolutely it varies over time. 
-<br><br>
+<p>We have had a few interesting experiences when we handled different GPU generations. Its quite amazing and risky that if we do program 3D screeens without considering those aspects. abosolutely it varies over time. Yet to publish this article. please wait...</p>
 <h1>/ join </h1><br>
-We welcome challenge loving programmers to our fleet.
-<br><br>
->Falling in love is a must! Yes... 3D love is our first criteria.
-<br><br>
-> Sense in 3D. With a white board or piece of paper, it's hard to communicate 3D with full sense. Only indications that we can draw or talk. Right? Yea.. then you got it.
-<br><br>
+<p>Falling in love is a must! Yes... If you are in love with 3D it is our first criteria!! </p>
+
+<p>
+> Sense in 3D. With a white board or piece of paper, it's hard to communicate 3D with full sense. Only indications that we can draw or talk. But as part of our global team, you have have this skill. 
+</p>
 > You may be good in JS or openGL ES. We agree that you are expert too. But in 1074 vectors, we love close-to-metal programming knowledge. We call it knowledge about system architecture, c programming knowledge, network stack knowledge, processor architecture or simply under-the-hood programmer knowledge!
 <br><br>
 >Be connected. How well is always good. We want you to learn seamlessly. Be abreast.
