--- a/index.htm
+++ b/index.htm
@@ -14,7 +14,7 @@
 <body style="background-color:black;color:orange;margin:10px;" >
 <br>
 &nbsp&nbsp
-<img src="images/1074vectors_logo.png" alt="1074 Vectors logo"  width="800" />
+<img class="img-responsive" src="images/1074vectors_logo.png" alt="1074 Vectors logo"  width="800" />
 <br><br>
 <br><br>
 <h1 style="font-size:350%;">
@@ -23,7 +23,7 @@
 <br>
 </h1>
 &nbsp&nbsp
-<img src="images/clayMouldingChild.jpg" alt="1074 Vectors logo"/>
+<img  class="img-responsive" src="images/clayMouldingChild.jpg" alt="1074 Vectors logo"/>
 <h1 style="font-size:250%;">
 <strong>3D</strong> does not demand <strong>mathematics</strong> to communicate.
 </h1>
@@ -34,12 +34,13 @@
 </p>
 
 <h1>/ home </h1>
+<div align="justify">
 <p>3D programming always had an artistic part and a precise engineering part. </p>
 <p>Let us talk about engineering first. It's been challenging to retain quality of 3D without losing accuracy and performance. How to reduce repeated computing to improve performance? Simple! Store some results. It’s a balance between Memory usage vs Computing for a better performance. This old theory is grabbing new attention nowadays. With the distributed nature and low-capacity of the new generation head-end devices, new parameters are evolving and balancing different aspects has become more challenging. As batteries are involved, the metrics like quality/watt and quality/degree-Celsius too need to be considered. As the FLOPS/$ for computing can be split between local and cloud enabled internet/intranet resources, the load division between them too is another point of consideration. In a nutshell, a good engineering solution cannot be achieved by tuning a single aspect alone.</p>
 <p>Much about the engineering aspects! Even though engineering always serves the purpose well, it does not consider the artistic quality. From Da-Vinci days itself, architecting plays an important role in beautifying engineering for artistic purpose. Architecting is not just engineering; it stands somewhere between engineering and art. Without a good combination of colors and effects, software can not impress users. For a good 3D software demands a good <strong> architecture</strong> to deliver pleasing its users and for utilizing the quality engineering behind it. </p>
 <p>At 1074Vectors, we love to deliver the artistic aspects excellently. For that, our engineering team do the best under the hood of these excellent screens. We do architect not just engineer the 3D solutions.</p>
 <p>To know more about doing a business with our support, please see <a href="#BIZ">/business</a> link.</p>
-
+</div>
 <p><strong>Important Note:-</strong></p>
 <p>All companies have a weakness to point out in their SWOT charts. Ours is constraints on schedule vs availability of good man-power. Yes. It’s a point to consider as it is connected with schedule constraints. It is also directly connected with our strengths: QoS and Privacy handling. We have strict privacy handling strategy so as to protect our customer’s intellectual interests. As it is very well known, only people with good quality can keep privacy intact. The side effect is, we heavily depend on the core people we have. So book your engagement period beforehand. But always feel free to talk… we are happy to hear you. </p>
 
@@ -76,13 +77,11 @@ Hard cipher systems are too poor compared to secrecy handling of a human brain! 
 </p>
 Discussions: any time.
 <br><br>
-Proposal & Ball Park estimate: 15 Mar 2015 (start)
+Proposal & Ball Park estimate: 15 June 2016 (start)
 <br><br>
-Paid proposal/Technical Analysis & estimate: 10 Apr 2015 (start)
+Paid proposal/Technical Analysis & estimate: 10 July 2016 (start)
 <br><br>
 Load indicators: <br>
-12/15: 100%<br>
-01/16:  75%<br>
 02/16:  50%<br>
 03/16: 100%<br>
 04/16:  75%<br>
