--- a/lidarLion.html
+++ b/lidarLion.html
@@ -13,7 +13,7 @@
     crossorigin="anonymous"></script>
 </head>
 <link rel="stylesheet" href="css/3d.css">
-<body style="background-color:black;color:orange;margin:10px;">
+<body style="margin:10px;">
   <section id="banner" >
     <div class="banner"> <img src="images/inbanner.png"  width="100%"/></div>
   </section>
@@ -24,7 +24,8 @@
   </div>
   <br>
   <div align="justify">
-    <p>Viewing Lidar data is never been simple. Lidar Lion is meant for those who do corridor mapping using lidar data.
+    <p>
+      Viewing Lidar data is never been simple. Lidar Lion is meant for those who do corridor mapping using lidar data.
     </p>
     <p>
       Survey is not an invention of digital era. It is indended to measure and keep facts. Physical feel of the field avoids obvious
@@ -49,8 +50,10 @@
       where their market pull is coming from gaming market. In games, scenes are modeled sythetically with continious surfaces.
       So a specially designed software for this purpose is really needed to improve accuracy and productivity of the work.
     </p>
-    <div style="background-color:orange;color:black;margin:20px;">
-      <p>-- <strong>When is the launch?</strong> --</p>
+    <div style="margin:20px;">
+      <p class="subhead">
+        When is the launch?
+      </p>
       <p> LidarLion is on his way. Its development is progress with 1074 Vectors. We welcome queries. Beceuase an early query may
         influence a feature in this new product. Any good change is great! Scheduled to release version 1.0 in June 2017. Interested
         parties may get 'beta' even before that.
