--- a/index.htm
+++ b/index.htm
@@ -34,7 +34,7 @@
 <p>3D programming makes sense! When it deals with huge data visualization, it's interesting too. <strong>1074 Vectors</strong> - The interactive 3D graphics expertize homes here. <strong>You</strong> are welcome as a reader, an enthusiast, a collaborator or as a product owner. 3D rendered screens will be the natural way to provide information from the data that you have!.
 </p>
 
-<a href="lidarLion.html">Product: Lidar Lion  >></a>
+<h1> <a href="lidarLion.html">/ Product: Lidar Lion  >></a> </h1>
 <h1>/ home </h1>
 
 <p>3D programming always had an artistic part and a precise engineering part. </p>
