Updated LidarLion section

--- a/index.htm
+++ b/index.htm
@@ -34,7 +34,11 @@
 <p>3D programming makes sense! When it deals with huge data visualization, it's interesting too. <strong>1074 Vectors</strong> - The interactive 3D graphics expertize homes here. <strong>You</strong> are welcome as a reader, an enthusiast, a collaborator or as a product owner. 3D rendered screens will be the natural way to provide information from the data that you have!.
 </p>
 
-<h1> <a href="lidarLion.html">/ Product: Lidar Lion  >></a> </h1>
+<h1> <a href="lidarLion.html">/ product: Lidar Lion  >></a> </h1>
+<p> This product is a completely software ecosystem indented to use in Geographical Information systems.
+This accepts data scanned by LIDAR (Laser based Radars). The data is very desnsed point clouds. 
+LidarLion is meant to be hosted in a intranet server and can be accessed by multple users same time. 
+Technically heart of this product is 3D graphics. <a href="lidarLion.html">Have a look into our product site >></a> </p>
 <h1>/ home </h1>
 
 <p>3D programming always had an artistic part and a precise engineering part. </p>
