Updated the dates, 'product' area

--- a/index.htm
+++ b/index.htm
@@ -34,11 +34,12 @@
 <p>3D programming makes sense! When it deals with huge data visualization, it's interesting too. <strong>1074 Vectors</strong> - The interactive 3D graphics expertize homes here. <strong>You</strong> are welcome as a reader, an enthusiast, a collaborator or as a product owner. 3D rendered screens will be the natural way to provide information from the data that you have!.
 </p>
 
-<h1> <a href="lidarLion.html">/ product: Lidar Lion  >></a> </h1>
-<p> This product is a completely software ecosystem indented to use in Geographical Information systems.
-This accepts data scanned by LIDAR (Laser based Radars). The data is very desnsed point clouds. 
-LidarLion is meant to be hosted in a intranet server and can be accessed by multple users same time. 
-Technically heart of this product is 3D graphics. <a href="lidarLion.html">Have a look into our product site >></a> </p>
+<h1>/ products: </h1>
+<h3>/ LidarLion </h3>
+<p> This product is a software ecosystem indented to use in Geographical Information systems domain.
+This accepts data scanned by LIDAR (Laser based Radars). The data is desnsed point clouds. 
+LidarLion is meant to be hosted in an intranet server and can be accessed by multple users same time. 
+Technically the heart of this product is 3D graphics. <a href="lidarLion.html">Have a look into our product site >></a> </p>
 <h1>/ home </h1>
 
 <p>3D programming always had an artistic part and a precise engineering part. </p>
@@ -83,9 +84,9 @@ Hard cipher systems are too poor compared to secrecy handling of a human brain! 
 </p>
 Discussions: any time.
 <br><br>
-Proposal & Ball Park estimate: 15 June 2016 (start)
+Proposal & Ball Park estimate: 15 Dec 2016 (start)
 <br><br>
-Paid proposal/Technical Analysis & estimate: 10 July 2016 (start)
+Paid proposal/Technical Analysis & estimate:  01 Jan 2016 (start)
 <br><br>
 Load indicators: <br>
 04/16:  75%<br>
