--- a/lidarlion.html
+++ b/lidarlion.html
@@ -25,36 +25,45 @@
   <br>
   <div align="justify">
     <p>
-      Viewing Lidar data is never been simple. Lidar Lion is meant for those who do corridor mapping using lidar data.
+      Viewing Lidar data is never been simple. LidarLion, a software ecosystem, is meant for those who do <strong>corridor mapping</strong> using lidar data.
     </p>
     <p>
-      Survey is not an invention of digital era. It is indended to measure and keep facts. Physical feel of the field avoids obvious
-      mistakes in manual survey. While we use Lidar, aquisition and measurements are done in two separate stages. The user
-      who measures assets in-front of a computer workstation does not have a real feel about the obvious context. He even
-      misses to note an whole asset even if he is a hard worker who puts a lot of effort to accurately gather measurements
-      of a known asset. Its been a decade (and more!) after the popularization of Lidar for civilian uses. Still a focussed
+      <strong>Survey</strong> is not an invention of digital era. It is indended to measure and keep facts. 
+      Physical feel of the field avoids obvious mistakes in manual survey. While we use Lidar, aquisition and measurements 
+      are done in two separate stages. 
+      The user who measures the assets in-front of a computer workstation does not have a real feel 
+      about the obvious context which can only be felt at the site. 
+      He even misses to note an whole asset even if he is a hard worker who puts a lot of effort to accurately gather measurements
+      of a entrie asset. It's been a decade (and more!) after the popularization of Lidar for civilian uses. Still a focussed
       software for this purpose is lacking in the scene.
     </p>
     <p>
-      LidarLion is a software focusses on the full workflow of lidar data from capturing at site to GIS data publishing. A typical
-      survey company collects data for each project in multiple capturing schedule. It could be different types mobile or
-      arial. Whole data has to be properly tagged with a unique project code. They could be in different harddisks. A barcoded
-      label in the harddisk will help at this stage. The measuring team might be in another shore in different timezone.
-      Including proper location mapping they may want to start from a 2D map. Some might be so fond of satelite imagery before
-      losing position in a lidar point-cloud. Some users might be so good in macro searching of assets. Some of them might
-      be experts in in-detail asset measurements. Lidarlion address a hightly collaborative working strategy. It is not released
-      yet. It is exclusively developing for this domain. It supports full workflow. Tasks are listed:No more e-mail based
+      LidarLion is a software focusses on the full workflow of lidar data from capturing at site to GIS data publication as reports. 
+      A typical survey company collects data for each project in multiple capturing schedule. 
+      It could be different types Lidar data (like mobile or arial). 
+      Whole data has to be properly tagged with a unique project code. 
+      Because of the huge size, data is kept in different harddisks. 
+      A barcoded label in the harddisk will help at this stage. 
+      The measurement is done by another team. The measuring team might be in another shore.
+      Including proper location mapping they may want to start from a generic 2D map. 
+      For an initial planning, some might be so fond of satelite imagery. Another aspect is the skillset of users in corridor mapping.
+      Some users might be so good in macro searching of assets. 
+      Some of them might be experts in in-detail measurements for each individual assets. 
+      Lidarlion address a hightly collaborative working strategy. It supports full workflow. Tasks are listed for tracking:No more e-mail based
       work-management. It's 3D is pure. Not sharing anything with a CAD software. CAD softwares desgined primarily for sythetic
       data generated from known geometries. It does not originally accomodate point-clouds. LidarLion is designed by keeping
       point-cloud as the heart. Vast and dense point clouds made by Lidar is not friendly for a typical graphics hardware
       where their market pull is coming from gaming market. In games, scenes are modeled sythetically with continious surfaces.
       So a specially designed software for this purpose is really needed to improve accuracy and productivity of the work.
     </p>
+    <p>
+      LidarLion is not released yet. It is under development. 
+    </p>
     <div style="margin:20px;">
       <p class="subhead">
         When is the launch?
       </p>
-      <p> LidarLion is on his way. Its development is progress with 1074 Vectors. We welcome queries. Beceuase an early query may
+      <p> Development is in progress with 1074 Vectors. We welcome queries. Beceuase an early query may
         influence a feature in this new product. Any good change is great! Scheduled to release version 1.0 in June 2017. Interested
         parties may get 'beta' even before that.
       </p>
