lidarLion to lidarlion

--- a/index.htm
+++ b/index.htm
@@ -39,7 +39,7 @@
 <p> This product is a software ecosystem indented to use in Geographical Information systems domain.
 This accepts data scanned by LIDAR (Laser based Radars). The data is desnsed point clouds. 
 LidarLion is meant to be hosted in an intranet server and can be accessed by multple users same time. 
-Technically the heart of this product is 3D graphics. <a href="lidarLion.html">Have a look into our product site >></a> </p>
+Technically the heart of this product is 3D graphics. <a href="lidarlion.html">Have a look into our product site >></a> </p>
 <h1>/ home </h1>
 
 <p>3D programming always had an artistic part and a precise engineering part. </p>
