--- a/lidarlion.html
+++ b/lidarlion.html
@@ -25,7 +25,7 @@
   <br>
   <div align="justify">
     <p>
-      Viewing Lidar data is never been simple. LidarLion, a software ecosystem, is meant for those who do <strong>corridor mapping</strong> using lidar data.
+      Viewing Lidar data has never been this simple. LidarLion, a software ecosystem, is meant for those who do <strong>corridor mapping</strong> using lidar data.
     </p>
     <p>
       <strong>Survey</strong> is not an invention of digital era. It is indended to measure and keep facts. 
@@ -34,26 +34,26 @@
       The user who measures the assets in-front of a computer workstation does not have a real feel 
       about the obvious context which can only be felt at the site. 
       He even misses to note an whole asset even if he is a hard worker who puts a lot of effort to accurately gather measurements
-      of a entrie asset. It's been a decade (and more!) after the popularization of Lidar for civilian uses. Still a focussed
+      of an entire asset. It's been a decade (and more!) after the popularization of Lidar for civilian uses. Still a focussed
       software for this purpose is lacking in the scene.
     </p>
     <p>
-      LidarLion is a software focusses on the full workflow of lidar data from capturing at site to GIS data publication as reports. 
-      A typical survey company collects data for each project in multiple capturing schedule. 
-      It could be different types Lidar data (like mobile or arial). 
+      LidarLion is a software focussing on the full workflow of lidar data from capturing at site to GIS data publication as reports. 
+      A typical survey company collects data for each project in multiple schedules. 
+      There could be different types of Lidar data (like mobile or arial). 
       Whole data has to be properly tagged with a unique project code. 
       Because of the huge size, data is kept in different harddisks. 
       A barcoded label in the harddisk will help at this stage. 
-      The measurement is done by another team. The measuring team might be in another shore.
+      The measurement is done by another team. The measuring team may be in another shore.
       Including proper location mapping they may want to start from a generic 2D map. 
       For an initial planning, some might be so fond of satelite imagery. Another aspect is the skillset of users in corridor mapping.
       Some users might be so good in macro searching of assets. 
       Some of them might be experts in in-detail measurements for each individual assets. 
       Lidarlion address a hightly collaborative working strategy. It supports full workflow. Tasks are listed for tracking:No more e-mail based
-      work-management. It's 3D is pure. Not sharing anything with a CAD software. CAD softwares desgined primarily for sythetic
-      data generated from known geometries. It does not originally accomodate point-clouds. LidarLion is designed by keeping
+      work-management. It's 3D is pure. No need to share anything with a CAD softwares, which are desgined primarily for synthetic
+      data generation from known geometries. It does not originally accomodate point-clouds. LidarLion is designed by keeping
       point-cloud as the heart. Vast and dense point clouds made by Lidar is not friendly for a typical graphics hardware
-      where their market pull is coming from gaming market. In games, scenes are modeled sythetically with continious surfaces.
+      where their market pull is coming from gaming market. In games, scenes are modeled synthetically with continuous surfaces.
       So a specially designed software for this purpose is really needed to improve accuracy and productivity of the work.
     </p>
     <p>
@@ -63,9 +63,9 @@
       <p class="subhead">
         When is the launch?
       </p>
-      <p> Development is in progress with 1074 Vectors. We welcome queries. Beceuase an early query may
-        influence a feature in this new product. Any good change is great! Scheduled to release version 1.0 in June 2017. Interested
-        parties may get 'beta' even before that.
+      <p> Development is in progress with 1074 Vectors. We welcome queries, because an early query may
+        influence a feature in this new product. Any change for good is great! Version 1.0 will be released in June 2017. Interested
+        parties may get a 'beta' version even before that.
       </p>
     </div>
   </div>
