changed link to thoughts.html

--- a/header.htm
+++ b/header.htm
@@ -25,7 +25,7 @@
             <div class="menulink">Profile</div>
             </a></li>
           <li id="logomenu"><a href="index.php" class="wow fadeInLeft"><img src="images/logo.png" ></a></li>
-          <li><a  href="thoughts.php">
+          <li><a  href="thoughts.html">
             <div class="menulink">Thoughts</div>
             </a></li>
           <li><a  href="contact.php">
