--- a/index_designer.htm
+++ b/index_designer.htm
@@ -167,7 +167,7 @@ We love the evolution of interactive 3D graphics. 3D programming always had a gl
             <div class="menulink">Profile</div>
             </a></li>
           <li id="logomenu"><a href="index.php" class="wow fadeInLeft"><img src="images/logo.png" ></a></li>
-          <li><a  href="thoughts.php">
+          <li><a  href="thoughts.htm">
             <div class="menulink">Thoughts</div>
             </a></li>
           <li><a  href="contact.php">
