inserting #links to thoughts.htm

--- a/index_designer.htm
+++ b/index_designer.htm
@@ -279,10 +279,10 @@ We love the evolution of interactive 3D graphics. 3D programming always had a gl
           <div class="col-sm-3 wow fadeInLeft"><a href="thoughts.htm">
             <div class="img"><img src="images/imag1.png" style="border:none;"></a></div>
             <div class="articlename">
-              <h4>Article Name</h4>
+              <h4>Reading 3D</h4>
             </div>
             <div class="desc"> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </div>
-            <div class="more"><a href="thoughts.htm"><img src="images/arow.png"></a></div>
+            <div class="more"><a href="thoughts.htm#Reading3D"><img src="images/arow.png"></a></div>
           </div>
           <div class="col-sm-3 wow fadeInLeft"><a href="thoughts.htm">
             <div class="img"><img src="images/imag2.png" style="border:none;"></a></div>
