--- a/thoughts.htm
+++ b/thoughts.htm
@@ -64,7 +64,7 @@ We love the evolution of interactive 3D graphics. 3D programming always had a gl
     <div class="row">
       <div class="desc">
         <p class="subhead">Professional 3D is not a single aspect. These thoughts will definitely give you a new dimension.</p>
-        <p class="subhead1">How your program can read 3D?</p>
+        <p class="subhead1"><a name="Reading3D"></a>How your program can read 3D?</p>
         <p> How to get 3D points? It is a discussion about methods to scan 3D.</p>
 
 <p>Stereoscopic imaging is the simple way to sense 3D. It is same as the way brain senses 3D from our eyes. All the one you need is two webcams with proper overlapped frustum. Correlate the same physical points on the two views that you get. The vision libraries such as OpenCV will give you aids. </p>  
