--- a/index_designer.htm
+++ b/index_designer.htm
@@ -281,7 +281,7 @@ We love the evolution of interactive 3D graphics. 3D programming always had a gl
             <div class="articlename">
               <h4>Reading 3D</h4>
             </div>
-            <div class="desc"> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </div>
+            <div class="desc"> Stereoscopic imaging is the simple way to sense 3D. It is same as the way brain senses 3D from our eyes. All the one you need is two webcams with proper overlapped frustum. Correlate the same physical points on the two views that you get... </div>
             <div class="more"><a href="thoughts.htm#Reading3D"><img src="images/arow.png"></a></div>
           </div>
           <div class="col-sm-3 wow fadeInLeft"><a href="thoughts.htm">
