Linking to 2nd article

--- a/index_designer.htm
+++ b/index_designer.htm
@@ -279,18 +279,18 @@ We love the evolution of interactive 3D graphics. 3D programming always had a gl
           <div class="col-sm-3 wow fadeInLeft"><a href="thoughts.htm">
             <div class="img"><img src="images/imag1.png" style="border:none;"></a></div>
             <div class="articlename">
-              <h4>Reading 3D</h4>
+              <h4>Acquiring 3D</h4>
             </div>
             <div class="desc"> Stereoscopic imaging is the simple way to sense 3D. It is same as the way brain senses 3D from our eyes. All the one you need is two webcams with proper overlapped frustum. Correlate the same physical points on the two views that you get... </div>
-            <div class="more"><a href="thoughts.htm#Reading3D"><img src="images/arow.png"></a></div>
+            <div class="more"><a href="thoughts.htm#Acquire3D"><img src="images/arow.png"></a></div>
           </div>
           <div class="col-sm-3 wow fadeInLeft"><a href="thoughts.htm">
             <div class="img"><img src="images/imag2.png" style="border:none;"></a></div>
             <div class="articlename">
-              <h4>Article Name</h4>
+              <h4>3D In Memory</h4>
             </div>
-            <div class="desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</div>
-            <div class="more"><a href="thoughts.htm"><img src="images/arow.png"></a></div>
+            <div class="desc">Usually storing in memory is a challenge for professional 3D applications. What is the simple way is keep a set of points? Each with 3 position values. That is x,yand z. just a keep a list of points. It is the most natural way of memory representation. But this thumb rule is not actually always practical. Based on the nature of the data...</div>
+            <div class="more"><a href="thoughts.htm#3DInMemory"><img src="images/arow.png"></a></div>
           </div>
           <div class="col-sm-3 wow fadeInLeft"><a href="thoughts.htm">
             <div class="img"><img src="images/imag3.png" style="border:none;"></a></div>
