--- a/index_designer.htm
+++ b/index_designer.htm
@@ -289,24 +289,24 @@ We love the evolution of interactive 3D graphics. 3D programming always had a gl
             <div class="articlename">
               <h4>3D In Memory</h4>
             </div>
-            <div class="desc">Usually storing in memory is a challenge for professional 3D applications. What is the simple way is keep a set of points? Each with 3 position values. That is x,yand z. just a keep a list of points. It is the most natural way of memory representation. But this thumb rule is not actually always practical. Based on the nature of the data...</div>
+            <div class="desc">Usually storing in memory is a challenge for professional 3D applications. What is the simple way is keep a set of points? Each with 3 position values. That is x,yand z. just a keep a list of points. It is the most natural way of memory representation. But this...</div>
             <div class="more"><a href="thoughts.htm#3DInMemory"><img src="images/arow.png"></a></div>
           </div>
           <div class="col-sm-3 wow fadeInLeft"><a href="thoughts.htm">
             <div class="img"><img src="images/imag3.png" style="border:none;"></a></div>
             <div class="articlename">
-              <h4>Article Name</h4>
+              <h4>Challenges in 3D Editing</h4>
             </div>
             <div class="desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</div>
-            <div class="more"><a href="thoughts.htm"><img src="images/arow.png"></a></div>
+            <div class="more"><a href="thoughts.htm#EditingChallenge"><img src="images/arow.png"></a></div>
           </div>
           <div class="col-sm-3 wow fadeInLeft"><a href="thoughts.php">
             <div class="img"><img src="images/imag4.png" style="border:none;"></a></div>
             <div class="articlename">
-              <h4>Article Name</h4>
+              <h4>3D Programming APIs</h4>
             </div>
             <div class="desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</div>
-            <div class="more"><a href="thoughts.php"><img src="images/arow.png"></a></div>
+            <div class="more"><a href="thoughts.htm#3DAPIs"><img src="images/arow.png"></a></div>
           </div>
         </div>
         <div class="row morearticle">
